<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.nabob.conch</groupId>
        <artifactId>conch-boot-dependencies</artifactId>
        <version>${revision}</version>
        <relativePath>../conch-boot-dependencies</relativePath>
    </parent>

    <artifactId>conch-boot-parent</artifactId>
    <packaging>pom</packaging>

    <properties>
        <main.user.dir>${basedir}/../..</main.user.dir>
        <project.encoding>UTF-8</project.encoding>
        <java.version>1.8</java.version>

        <maven.compiler.plugin>3.1</maven.compiler.plugin>
        <maven.source.plugin>3.0.0</maven.source.plugin>
        <maven.surefire.plugin>2.22.2</maven.surefire.plugin>
    </properties>

    <dependencyManagement>
        <dependencies>

        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plugin}</version>
                <configuration>
                    <encoding>${project.encoding}</encoding>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${maven.source.plugin}</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>${flatten-maven-plugin.version}</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

<!--    <profiles>-->
<!--        <profile>-->
<!--            <id>jdk8</id>-->
<!--            <activation>-->
<!--                <jdk>1.8</jdk>-->
<!--            </activation>-->
<!--            <build>-->
<!--                <plugins>-->
<!--                    <plugin>-->
<!--                        <groupId>org.apache.maven.plugins</groupId>-->
<!--                        <artifactId>maven-surefire-plugin</artifactId>-->
<!--                        <version>${maven.surefire.plugin}</version>-->
<!--                        <dependencies>-->
<!--                            <dependency>-->
<!--                                <groupId>org.ow2.asm</groupId>-->
<!--                                <artifactId>asm</artifactId>-->
<!--                                <version>6.2</version>-->
<!--                            </dependency>-->
<!--                        </dependencies>-->
<!--                        <configuration>-->
<!--                            <runOrder>alphabetical</runOrder>-->
<!--                            <reuseForks>false</reuseForks>-->
<!--                        </configuration>-->
<!--                    </plugin>-->
<!--                </plugins>-->
<!--            </build>-->
<!--        </profile>-->

<!--        <profile>-->
<!--            <id>jdk11</id>-->
<!--            <activation>-->
<!--                <jdk>11</jdk>-->
<!--            </activation>-->
<!--            <build>-->
<!--                <plugins>-->
<!--                    <plugin>-->
<!--                        <groupId>org.apache.maven.plugins</groupId>-->
<!--                        <artifactId>maven-surefire-plugin</artifactId>-->
<!--                        <version>${maven.surefire.plugin}</version>-->
<!--                        <dependencies>-->
<!--                            <dependency>-->
<!--                                <groupId>org.ow2.asm</groupId>-->
<!--                                <artifactId>asm</artifactId>-->
<!--                                <version>6.2</version>-->
<!--                            </dependency>-->
<!--                        </dependencies>-->
<!--                        <configuration>-->
<!--                            <reuseForks>false</reuseForks>-->
<!--                            <argLine>@{argLine} -Djdk.attach.allowAttachSelf &#45;&#45;add-opens-->
<!--                                java.base/jdk.internal.loader=ALL-UNNAMED-->
<!--                            </argLine>-->
<!--                        </configuration>-->
<!--                    </plugin>-->
<!--                    <plugin>-->
<!--                        <groupId>org.apache.maven.plugins</groupId>-->
<!--                        <artifactId>maven-javadoc-plugin</artifactId>-->
<!--                        <executions>-->
<!--                            <execution>-->
<!--                                <id>attach-javadocs</id>-->
<!--                                <goals>-->
<!--                                    <goal>jar</goal>-->
<!--                                </goals>-->
<!--                                <configuration>-->
<!--                                    <additionalOptions>-source 8</additionalOptions>-->
<!--                                </configuration>-->
<!--                            </execution>-->
<!--                        </executions>-->
<!--                    </plugin>-->
<!--                </plugins>-->
<!--            </build>-->
<!--        </profile>-->
<!--    </profiles>-->

</project>
